feat: update .gitignore to include *.sql and supabase; add database connection handling in database.py; create initial .vscode settings and extensions configuration

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ recordings/
 transcripts/
 summaries/
 *.db
+*.sql
+supabase
 
 __pycache__/
 script_progress.log
+
+
+#temporarily git ignoring these:
+scripts/
+dashboard/
