--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,28 @@
-# Use the official Python image as the base image
 FROM python:3.12-slim
 
-# Set the working directory in the container
+# Set working directory
 WORKDIR /app
 
-# Install system dependencies needed for PyAudio and building other packages
+# Install system dependencies needed for PyAudio and other packages
 RUN apt-get update && apt-get install -y \
     gcc \
-    portaudio19-dev \
     libasound2-dev \
+    portaudio19-dev \
+    libportaudio2 \
+    libportaudiocpp0 \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy the requirements file into the container
-COPY backend/requirements.txt ./requirements.txt
-
-# Install dependencies
-#RUN pip install --upgrade pip
+# Copy backend requirements and install Python dependencies
+COPY requirements.txt .
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code into the container
-COPY backend ./backend
+# Copy backend source code
+COPY . .
 
-# Expose the port that the FastAPI app will run on
+# Expose the FastAPI port
 EXPOSE 8000
 
-# Command to run the FastAPI app using Uvicorn
+# Run the FastAPI app
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
