--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,45 +1,24 @@
-# FROM python:3.12-slim
-
-# # Set working directory
-# WORKDIR /app
-
-# # Install system dependencies needed for PyAudio and other packages
-# RUN apt-get update && apt-get install -y \
-#     gcc \
-#     libasound2-dev \
-#     portaudio19-dev \
-#     libportaudio2 \
-#     libportaudiocpp0 \
-#     ffmpeg \
-#     && rm -rf /var/lib/apt/lists/*
-
-# # Copy backend requirements and install Python dependencies
-# COPY requirements.txt .
-# RUN pip install --upgrade pip
-# RUN pip install --no-cache-dir -r requirements.txt
-
-# # Copy backend source code
-# COPY . .
-
-# # Expose the FastAPI port
-# EXPOSE 8000
-
-# # Run the FastAPI app
-# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-
+# Use a lightweight Python image
 FROM python:3.12-slim
 
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy only the FastAPI backend code
+# Copy the requirements.txt file from the backend folder
 COPY requirements.txt .
 
+# Install Python dependencies
 RUN python -m venv /opt/venv \
  && . /opt/venv/bin/activate \
  && pip install --upgrade pip \
- && pip install -r requirements.txt
+ && pip install --no-cache-dir -r requirements.txt
 
+# Copy the backend source code into the container
 COPY app/ ./app/
 
+# Expose the FastAPI port
+EXPOSE 8000
+
+# Run the FastAPI app using Uvicorn
 CMD ["/opt/venv/bin/uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
